--- a/parent/device-registry/src/main/resources/public/pages/templates/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/view.html
@@ -1,4 +1,4 @@
-<div class="modal-content" style="width: 50em;">
+<div class="modal-content" style="width: 50em; height: 30em;">
 	<div class="modal-header">
 		<h4 class="modal-title">Template Details</h4>
 	</div>
