--- a/parent/device-registry/src/main/webapp/public/index.css
+++ b/parent/device-registry/src/main/webapp/public/index.css
@@ -49,9 +49,9 @@ input, textarea, select, .form-control{
 	color: red;
 }
 .error:before{
-	font-family:'FontAwesome';
+	font-family:'Font Awesome 5 Free';
 	content:"\f071";
-	font-weight: 100;
+	font-weight: 900;
 	font-size: small;
 	padding-right: 0.5em;
 }
