--- a/parent/master-data-service/src/main/webapp/public/index.css
+++ b/parent/master-data-service/src/main/webapp/public/index.css
@@ -42,6 +42,17 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .form-control.error{
 	border-color: #ffaaaa;
 }
+.form-table{
+	width: 100%;
+}
+.form-table>tbody>tr>td:LAST-CHILD {
+	width: 50%;
+	padding: 0 0 0 1em;
+}
+.form-table>tbody>tr>td:FIRST-CHILD {
+	width: 50%;
+	padding: 0 1em 0 0;
+}
 .card{
 	border-radius: 5px;
 	background-color: #ffffff;
