--- a/parent/master-data-service/src/main/webapp/public/index.css
+++ b/parent/master-data-service/src/main/webapp/public/index.css
@@ -42,6 +42,11 @@ form{
 .form-group > label > .error{
 	float: right;
 }
+.form-group.required label:after{
+	content:"*";
+	color:red;
+	margin-left: 4px;
+}
 .form-control.error{
 	border-color: #ffaaaa;
 }
